Fixes #2338: Align items in the repeating groups. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2830 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/includes/styles.css
+++ b/web/src/main/webapp/includes/styles.css
@@ -2963,3 +2963,7 @@ a.sdvItemLink {
 table.footerInnerTable {
 	width: 1024px;
 }
+
+.itemHolderClass.aka_padding_norm.aka_cellBorders.align_left {
+	text-align: left;
+}
